# lem_in

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  author  bad.t  bad2.t  bad3.t  bs.t  docker-compose.yml  ldap.data  main.py  run.sh  run_sup.t.sh  run_tests.sh
libft/: Makefile  author  ft_atoi.c  ft_atoi_m.c  ft_bzero.c  ft_free_matrix.c  ft_free_ret.c  ft_ftoa.c  ft_int_to_unicode.c  ft_intlen.c  ft_is_in_charset.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_numlen.c  ft_pow.c  ft_print_words_table.c  ft_putchar.c  ft_putchar_fd.c  ft_putchar_u_fd.c  ft_putendl.c  ft_putendl_fd.c  (+46 more)
libft/ft_gnl/: ft_get_next_line.c  ft_gnl_utils.c
libft/ft_map/: ft_char_cmp_funcs.c  ft_get_cmp_func.c  ft_get_free_func.c  ft_map_works.c  ft_s_int_cmp_funcs.c  ft_u_int_cmp_funcs.c  rb_tree_assists.c  rb_tree_delete.c  rb_tree_delete_assist.c  rb_tree_insert.c  rb_tree_insert_assist.c  rb_tree_merge.c
libft/ft_mlx/: ft_hsv.c  ft_hsv_grad.c  ft_mlx_destroy.c  ft_mlx_hooks.c  ft_mlx_img.c  ft_mlx_init.c
libft/ft_printf/: ft_find_cntrl.c  ft_float_compose_utils.c  ft_printf.c  ft_printf_compose.c  ft_printf_date_compose.c  ft_printf_float_compose.c  ft_printf_int_compose.c  (+8 more)
srcs/: dijkstra.c  ft_flow.c  ft_flow_send.c  ft_flows.c  ft_freeshers.c  ft_heap.c  ft_lems.c  ft_makers.c  ft_parser.c  ft_parser_flags.c  ft_parser_links.c  ft_parser_rooms.c  ft_parser_utils.c  ft_partitial_cases.c  ft_print_answer.c  ft_shortest.c  ft_usages.c  ft_utils.c  ft_vis.c  ft_vis_ants.c  ft_vis_dimensions.c  ft_vis_drawers.c  ft_vis_init_works.c  ft_vis_save_nodes.c  ft_vis_text_works.c  ft_vis_turns.c  lem_in.h  lem_in_structs.h  len_in.h  main.c
tests/: 10k  1_ant  1node1ant  2nodeNants  big_1  big_2  big_5  big_6  big_7  big_8  manyAnts  many_ants  nice  small_1  small_2  small_3  small_4
(+29 files in other folders)
